--- a/index.html
+++ b/index.html
@@ -6,6 +6,64 @@
     <title>Kryb Opgave</title>
     <script src="assets/js/script.js" defer></script>
     <link rel="stylesheet" href="assets/css/stylesheet.css" />
+    <script src="https://kit.fontawesome.com/b5a0cb72d4.js" crossorigin="anonymous"></script>
   </head>
-  <body></body>
+  <body>
+    <section class="headerSection">
+      <header>
+        <div class="logoContainer">
+          <input type="text" placeholder="Søg" />
+          <i class="fa-solid fa-magnifying-glass"></i>
+
+          <img class="logoImg" src="assets/img/logo_small_black.png" alt="" />
+        </div>
+        <nav class="navContainer">
+          <ul>
+            <li>
+              <a href=""></a>
+              FORSIDE
+            </li>
+            <li>
+              <a href=""></a>
+              SHOP
+            </li>
+            <li>
+              <a href=""></a>
+              FORHANDLERE
+            </li>
+            <li>
+              <a href=""></a>
+              INSPIRATION
+            </li>
+            <li>
+              <a href=""></a>
+              OM KRYB
+            </li>
+            <li>
+              <a href=""></a>
+              KONTAKT
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <i class="fa-solid fa-bag-shopping"></i>
+              (0)
+            </li>
+          </ul>
+        </nav>
+        <img src="assets/img/background.jpg" alt="" class="navbackground" />
+      </header>
+    </section>
+
+    <section class="productSection"></section>
+
+    <section class="aboutSection"></section>
+
+    <section class="productSection"></section>
+    <section class="contactSection"></section>
+
+    <section class="footerSection">
+      <footer></footer>
+    </section>
+  </body>
 </html>
